--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -1,19 +1,20 @@
-body, html {
-    height: 100%;
-    margin: 0;
+body,
+html {
+  height: 100%;
+  margin: 0;
 }
 
 .login-bg {
-    background: #f4f4f4;
-    /* Full height */
-    height: 100vh; 
+  background: #f4f4f4;
+  /* Full height */
+  height: 100vh;
 
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .login-panel {
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
